--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "inertiajs/inertia-laravel": "^0.2.12",
         "laravel/framework": "^8.0",
         "laravel/jetstream": "^1.3",
+        "laravel/passport": "^10.0",
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.0"
     },
